--- a/rdfetch.in
+++ b/rdfetch.in
@@ -36,7 +36,7 @@ colors
 # This script complies with Semantic Versioning: http://semver.org/
 vMajor=0
 vMinor=4
-vPatch=8
+vPatch=9
 vHash='$Hash$'
 
 # Get zsh functions necessary for this script.
@@ -1008,9 +1008,9 @@ function addRDDropbox() {
   ## See whether there is a dropbox with a matching pathname.
   ##########################################################################################
   query="select d.ID,d.PATH,d.TO_CART,d.GROUP_NAME from DROPBOXES d where d.PATH like '${DIR_LIBRARY}/${feedGroup}/${feedName}/%'"
+  IFS='	' # Just <Tab>
   # ShellCheck is a bit too aggressive in its quoting suggestions.
   # shellcheck disable=SC2046
-  IFS='	' # Just <Tab>
   read dropboxID dropboxPATH dropboxCARTNUM dropboxGROUP <<<$(doSQL "${query}")
   IFS="${oIFS}"
   if (( dropboxID )) ; then
@@ -1114,6 +1114,7 @@ function showRDDropboxes() {
   local -r verbose=${1}
 
   local query
+  local myHostname
   local id stationName boxpath group cart dropcuts title origin_datetime
 
   if ! okDatabaseStructure DROPBOXES:id+station_name+path+group_name+to_cart+delete_cuts,CART:number+title,CUTS:cart_number+origin_datetime "${verbose}" ; then
@@ -1123,11 +1124,13 @@ function showRDDropboxes() {
     return "${returnValue}"
   fi
 
+  myHostname="$(${HOSTNAME} -s)"
+
   # This query is broken up simply for readability.
   query="select d.ID,d.STATION_NAME,d.PATH,d.GROUP_NAME,d.TO_CART,d.DELETE_CUTS,c.TITLE,u.ORIGIN_DATETIME from DROPBOXES as d"
   query="${query} join CART as c on d.TO_CART = c.NUMBER"
   query="${query} left join CUTS as u on c.NUMBER = u.CART_NUMBER"
-  query="${query} where d.STATION_NAME = '${HOSTNAME%%.*}'"
+  query="${query} where d.STATION_NAME = '${myHostname}'"
   query="${query} and d.PATH like '${DIR_LIBRARY}/%' order by d.PATH"
 
   trap 'trap - 0 2 3 ; return ;' 0 2 3
@@ -1416,11 +1419,11 @@ EOF
 ## Script main line
 ##########################################################################################
 
-############# BEGIN external shell commands used in this script. #############
+############ BEGIN external shell commands used in this script. ############
 # This script uses these 24 external commands.
 # Look for them in their upper case, parameter expanded form.
 typeset -a our_commands
-our_commands=( awk cat chmod column cp crontab diff find fmt getopt grep less mkdir mktemp mv nl pidof podget rm sed sort wc wget xsltproc )
+our_commands=( awk cat chmod column cp crontab diff find fmt getopt grep hostname less mkdir mktemp mv nl podget rm sed sort wc wget xsltproc )
 # Find the executables we need; this uses some basic shell and a ZSH trick:
 # the (U) in the eval says to evaluate the parameter as all upper case
 # letters. This snippet generates shell parameters representing the upper case
@@ -1437,7 +1440,7 @@ for C in ${our_commands[*]} ; do
   [[ -x $(eval print \$"${(U)C//-/_}") ]] || { print "Cannot find ${C}! Done."; return 1 ; }
 done
 unset our_commands
-############## END external shell commands used in this script. ##############
+############# END external shell commands used in this script. #############
 
 # Set some defaults, and see below for more ways to set these.
 typeset DIR_CONFIG=@PODGET_DIR_CONFIG@
