--- a/rdfetch.in
+++ b/rdfetch.in
@@ -37,7 +37,7 @@ colors
 # This script complies with Semantic Versioning: http://semver.org/
 vMajor=0
 vMinor=4
-vPatch=13
+vPatch=14
 vHash='$Hash$'
 
 # Get zsh functions necessary for this script.
@@ -363,8 +363,11 @@ function enableFeed() {
       if [[ -z "${rssXML}" ]] ; then
         warning "I could not retrieve this feed. Please make sure the URL, username (if needed) and password (if needed) are correct and try again."
       else
-        typeset feedTitle=$(echo "${rssXML}" | ${XMLSTARLET} sel -t -m /rss/channel -v title --nl)
-        typeset -r feedEnclosureFileExt=${$(echo "${rssXML}" | ${XMLSTARLET} sel -t -m /rss/channel -v item/enclosure/@url --nl)##*.}
+        typeset feedTitle=$(echo "${rssXML}" | ${XMLSTARLET} sel -t -m /rss/channel -v title)
+	## BUG ALERT: this "algorithm" for determining the download
+	## file extension is not foolproof. More work to be done.
+        typeset -r firstFeedEnclosure=$(echo "${rssXML}" | ${XMLSTARLET} sel -t -m /rss/channel -v item/enclosure/@url --nl | ${HEAD} -n 1)
+        typeset -r feedEnclosureFileExt=${${firstFeedEnclosure%%\?*}##*.}
       fi
 
       # Offer to create a Rivendell dropbox if we are making changes
@@ -1325,10 +1328,10 @@ EOF
 ##########################################################################################
 
 ############# BEGIN external shell commands used in this script. #############
-# This script uses these 24 external commands.
+# This script uses these 25 external commands.
 # Look for them in their upper case, parameter expanded form.
 typeset -a our_commands
-our_commands=( awk cat chmod column cp crontab diff find fmt getopt grep hostname less mkdir mktemp mv nl podget rm sed sort wc wget xmlstarlet )
+our_commands=( awk cat chmod column cp crontab diff find fmt getopt grep head hostname less mkdir mktemp mv nl podget rm sed sort wc wget xmlstarlet )
 # Find the executables we need; this uses some basic shell and a ZSH trick:
 # the (U) in the eval says to evaluate the parameter as all upper case
 # letters. This snippet generates shell parameters representing the upper case
