--- a/zsh-functions.in
+++ b/zsh-functions.in
@@ -1,6 +1,7 @@
 #!/bin/zsh
-# shellcheck shell=bash disable=SC2016,SC2086,SC2116,SC2128,SC2154,SC2155,SC2162,SC2190,SC2207
+# shellcheck shell=bash disable=SC2016,SC2048,SC2086,SC2116,SC2128,SC2154,SC2155,SC2162,SC2190,SC2207,SC2248,SC2296,SC2298,SC2299,SC2312
 # SC2016: Single quotes are used explicitly to ignore parameter expansion.
+# SC2048: shellcheck is too quote conservative.
 # SC2086: All instances of params are quoted where they need to be.
 # SC2116: Not a "Useless echo", we need it to expand the params correctly.
 # SC2128: ZSH expands arrays without specifying ${param[*]}.
@@ -8,7 +9,12 @@
 # SC2155: Ignoring all return values in assignments.
 # SC2162: Because we do not ever encounter backslashes.
 # SC2190: ZSH: associative array assignment "just works"(TM).
-# SC2207: "prefer mapfile or read -a" these are all ZSH-isms
+# SC2207: "prefer mapfile or read -a" these are all ZSH-isms.
+# SC2248: shellcheck is too quote conservative.
+# SC2296: ZSH permits bracketed parameter expansions starting with ().
+# SC2298: ZSH permits nested parameter expansions.
+# SC2299: ZSH permits nested parameter expansions.
+# SC2312: No need to invoke commands separately.
 
 ##############################################################################
 #
@@ -31,7 +37,7 @@ zmodload zsh/datetime
   vLibMajor=0
   vLibMinor=2
   vLibPatch=18
-  vLibHash='$Hash: 556d950$'
+  vLibHash='$Hash$'
 }
 function zsh_library_version() {
   printf "%d.%d.%d.%d\n" \
@@ -54,7 +60,7 @@ function sendNotification() {
   local message="${1:?Need a message to send for the notification.}" ; shift
   local messagefile="${1}" # optional text filename to attach
 
-############ BEGIN external shell commands used in this function. ############
+  ############ BEGIN external shell commands used in this function. ############
   # This function uses these 7 external commands.
   # Look for them in their upper case, parameter expanded form.
   local -a our_commands
